Maintenance/use more junit5 features (#518)
* clean up code

* use @Mock annotation

* replace times(0) by never and times(1) by default verify call

* use parameter injection

* test on configuration properties

* it makes no sense to test in one test the attributes of a pojo and in another tests the existence of the pojo.

* brain overload, BDDAssertions is only used in a single test

* user parameter injection

* don't mock POJOs

* remove useless tests

* deactivate the unused test instead of blocking it incorrectly

* apply spotless rules

* use @Spy instead of @Mock to test AssaultProperties too.

* don't mix assertNotNull with assertThat

* mock the ApplicationEventPublisher and not the MetricEventPublisher

* remove internal ConfigurationBean from test Application, remove empty test class

---------

Co-authored-by: Jens Kaiser <jens.kaiser@codecentric.de>